ajuste en campo mail

--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -9,7 +9,7 @@
         name="nombreUsuarioBusqueda" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group col-md-6">
-      <input class="form-control" id="mailUsuarioBusqueda" [(ngModel)]="usuarioBuscar.Mail" placeholder="Mail">
+      <input class="form-control" id="mailUsuarioBusqueda" [(ngModel)]="usuarioBuscar.correo" placeholder="Mail">
     </div>  
   </div>
   <div class="form-row">
