--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -40,7 +40,7 @@
       <tbody>
         <tr *ngFor="let user of usuarioList">
           <th scope="row">
-            <button type="button" (click)="EditarUsuarios(user)" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" (click)="editarUsuarios(user)" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
               Editar
             </button>
             <button type="button" (click)="opcionesPorUsuario(user)" class="btn  btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal2">
@@ -67,21 +67,21 @@
           </div>
           <div class="modal-body">
             <div class="form-row">
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-4 col-lg-6">
                <input class="form-control" id="nombreUsuarioCreacion" [(ngModel)]="usuarioCrear.nombre" placeholder="* Nombre" name="nombreUsuarioCreacion">
               </div>
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-4 col-lg-6">
                   <input class="form-control" id="meilUsuarioCrear" [(ngModel)]="usuarioCrear.correo" placeholder="* Correo">
                 </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-4 col-lg-6">
                   <label for="rolUsuarioCrear">Lista Roles</label>
               <select multiple class="form-control "  id="rolUsuarioCrear">
                   <option *ngFor="let rol1 of rolList" (click)="seleccionarRol(rol1)" value="{{rol1.rol_id}}">{{rol1.nombre}}</option>
                 </select>
               </div>
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-4 col-lg-6">
                   <label for="Activas">Roles Seleccionados</label>
                   <select multiple class="form-control" id="Activas">
                       <option *ngFor="let select1 of rolListSelect"  (click)="unSeleccionarRol(select1)" value="{{select1.rol_id}}">{{select1.nombre}}</option>
@@ -89,12 +89,12 @@
                 </div>
             </div> 
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4 col-lg-6">
                    <input class="form-control" type="number" id="identificacionUsuarioCrear" [(ngModel)]="usuarioCrear.identificacion" placeholder="Identificación">
                   </div>
 
 
-              <div class="form-check col-md-6">
+              <div class="form-check col-md-4 col-lg-6">
                  <input class="form-control" type="password" id="claveUsuarioCrear" [(ngModel)]="usuarioCrear.clave" placeholder="* Clave">
               </div>
             </div>
