adelanto en desarrollo en cuadre de caja

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="fixed-bottom foother footer " >Soporte-Contactos:
-      <h6>Diana Maria Gonzalez. Cel: 3178736068</h6>
+      <h6>Argenis Ruiz. Cel: 3182541466</h6>
       <h6>Luis Miguel Gonzalez. Cel: 3185222474</h6>
   </div>
 </div>
