--- a/src/app/ventas-dia/ventas-dia.component.html
+++ b/src/app/ventas-dia/ventas-dia.component.html
@@ -35,6 +35,10 @@
     </div>
     <hr />
     <div class="form-row">
+            <div class="form-group col-md-1 col-sm-4 d-block d-sm-none" id="divEsc" #divEsc>
+                    <button type="button" class="btn btn-primary btn-sm" id="escPV" #escPV
+                    (click)="scapeTecla(escPV)">Escape</button>
+            </div>
         <div class="form-group col-md-1 col-sm-4" id="divSiguiente" #divSiguiente>
             <button type="button" class="btn btn-primary btn-sm" id="siguientePV" autofocus #siguientePV
                 (keyup)="controlTeclas($event,siguientePV)" (keyup.enter)="enterTecla(siguientePV)">Siguiente</button>
@@ -63,10 +67,22 @@
             <button type="button" class="btn btn-primary btn-sm" id="imprimirPV" (click)="imprimirModal()" #imprimirPV
                 (keyup)="controlTeclas($event,imprimirPV)" (keyup.enter)="enterTecla(imprimirPV)">Imprimir</button>
         </div>
-        <div class="form-group col-md-1 col-sm-4" id="divOpciones" #divOpciones>
-            <button type="button" class="btn btn-primary btn-sm" id="opcionPV" #opcionPV
-                (keyup)="controlTeclas($event,opcionPV)" (keyup.enter)="enterTecla(opcionPV)">Opciones</button>
+        <div class="form-group col-md-2 col-sm-4" id="divOpciones" #divOpciones>
+        <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" id="opcionPV" #opcionPV type="button"
+                (keyup)="controlTeclas($event,opcionPV)"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Opciones
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                  <button class="dropdown-item" type="button" *ngFor="let opcion of opciones" #cuadreCajaPV id="{{opcion.url}}"
+                  (keyup.enter)="enterTecla(cuadreCajaPV)" (click)="enterTecla(cuadreCajaPV)">{{opcion.nombre}}</button>
+                
+                </div>
+              </div>
+        
+          
         </div>
+
         <div class="form-group col-md-1 col-sm-4" id="divFin" #divFin>
             <button type="button" class="btn btn-primary btn-sm" id="finPV" #finPV (keyup)="controlTeclas($event,finPV)"
                 routerLink="/menu" (keyup.enter)="enterTecla(finPV)">Fin</button>
@@ -78,9 +94,7 @@
                     (keydown.esc)="scapeTecla(clientePV)">
             </div>
         </div>
-
         <div class="form-row">
-
             <div class="form-group col-sm-2 d-none" id="divCodigo" #divCodigo>
                 <input name="codigoPV" #codigoPV placeholder="Código" class="form-control" id="codigoPV"
                     (keydown.enter)="enterTecla(codigoPV)" (keydown.esc)="scapeTecla(clientePV)">
@@ -148,7 +162,7 @@
                     </div>
                     <div class="col col-ms-1">
                         <h5>Cambio:</h5>
-                            <h4 style="color:red">{{document.cambio}}</h4>
+                        <h4 style="color:red">{{document.cambio}}</h4>
                     </div>
                     <div class="col col-ms-1">
                         <h6>Imprimir en pantalla?: </h6>
@@ -164,7 +178,7 @@
                             (keydown.esc)="scapeTecla(continuaImpresionPV)"
                             (keydown.S)="enterTecla(continuaImpresionPV)" (keydown.N)="cancelarImpresion()">
                     </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -219,7 +233,16 @@
         </div>
         <div class="col col-ms-1">
             <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
-                
-              </a>
+
+            </a>
+        </div>
+        <!-- Button trigger modal .d-none se repete esta parte para todos las pantallas de opciones de punto de venta dia -->
+        <button type="button" class="btn btn-primary d-none" id = "cuadreCajaModal" #cuadreCajaModal data-toggle="modal" data-target="#cuadreCajaModa">
+            Launch demo modal
+        </button>
+        <!-- Modal cuadre de caja -->
+        <div class="modal fade"  id="cuadreCajaModa" tabindex="-1" role="dialog" aria-labelledby="cuadreCajaModalLabel"
+            aria-hidden="true">
+            <app-cuadre-caja></app-cuadre-caja>
         </div>
     </div>
